--- a/css/Quiet.css
+++ b/css/Quiet.css
@@ -27,7 +27,7 @@
 
 body:before{content:"You are using "var(--theme-name)", Have a good day!";z-index:1000000000000000000000000;color:#fff;background:var(--main-color);top:0px;left:50%;position:absolute;border-radius:5px;padding:5px 15px;-webkit-transform:translate(-50%, -100%);transform:translate(-50%, -100%);-webkit-animation:version 3s ease;animation:version 3s ease;-webkit-animation-delay:4s;animation-delay:4s;}
 
-.wordmark-2L03Wr::before{content: "More themes and plugins at betterdocs.net";color: #5a5a5a;font-size: 12px;font-weight: 600;position: fixed;right: 10%;top: 5px;}
+.wordmark-2L03Wr::before{content: "superior hvher!";color: #5a5a5a;font-size: 12px;font-weight: 600;position: fixed;right: 10%;top: 5px;}
 
 body,span:not(.spinner-item){-webkit-font-smoothing:antialiased;-webkit-backface-visibility:hidden;}
 
