--- a/css/Quiet.css
+++ b/css/Quiet.css
@@ -3,8 +3,8 @@
 @import url("https://rawgit.com/0mniscient/Discord-Themes/master/css/Tags.css");
 
 :root {
-    --version-content: "7.9";
-    --theme-name: "Quiet";
+    --version-content: "";
+    --theme-name: "oMilez";
     --theme-letter: "Q";
 }
 
